<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.thunderwarn.thunderwarn.activities.SettingsActivity"
    android:id="@+id/changeLocationMainPanel">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:id="@+id/scrollView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/changeLocationPanel"
            android:baselineAligned="false">

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/useGps"
                android:id="@+id/switchUseGps"
                android:gravity="right"
                android:textOn="@string/on"
                android:textOff="@string/off" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>