<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.thunderwarn.thunderwarn.activities.SettingsActivity"
    android:id="@+id/SettingsMainPanel">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:id="@+id/scrollView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/settingsPanel"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/notifications"
                    android:id="@+id/notificationsText"
                    android:singleLine="true"
                    android:gravity="left" />

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/switchNotification"
                    android:gravity="right"
                    android:textOn="@string/on"
                    android:textOff="@string/off" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/apparent_temperature"
                    android:id="@+id/apparentTemperatureText"
                    android:singleLine="true"
                    android:gravity="left" />
                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/switchApparentTemperature"
                    android:gravity="right"
                    android:textOn="@string/on"
                    android:textOff="@string/off" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>